--- a/force-app/main/default/classes/ResourceFavoriteService.cls
+++ b/force-app/main/default/classes/ResourceFavoriteService.cls
@@ -17,10 +17,7 @@ public inherited sharing class ResourceFavoriteService extends ResourceArticleVi
     }
 
     protected override ResourceService.ResourceWrapperContainer getErrorNoResources() {
-        return rService.getResourceType() == ResourceService.RESOURCE_TYPE_ARTICLE ? ResourceService.getErrorNoArticles(true) : ResourceService.getErrorNoVideos(true);
+        return resourceType == ResourceService.RESOURCE_TYPE_ARTICLE ? ResourceService.getErrorNoArticles(true) : ResourceService.getErrorNoVideos(true);
     }
 
-    protected override Boolean isObjectsToFilterMissing() {
-        return ParticipantDecoupler.getResourceActions(rService.getParticipant()).isEmpty();
-    }
 }
