--- a/force-app/main/default/classes/ResourceRemote.cls
+++ b/force-app/main/default/classes/ResourceRemote.cls
@@ -2,10 +2,9 @@ public with sharing class ResourceRemote {
 
     @AuraEnabled
     public static ResourceService.ResourceWrapperContainer getResources(String resourceType, String resourceMode) {
-
         try {
             ResourceDelegate rDelegate = ResourceDelegate.getInstance();
-            if ('Favorite'.equalsIgnoreCase(resourceMode)) {
+            if (resourceMode.equalsIgnoreCase('Favorite')) {
                 return rDelegate.getFavoriteResources(resourceType);
             } else {
                 return rDelegate.getResources(resourceType);
@@ -27,7 +26,7 @@ public with sharing class ResourceRemote {
     @AuraEnabled
     public static void setResourceAction(String resourceId, Boolean isFavorite, Boolean isVoted) {
         try {
-            String participantId = ((ResourceService) ClassFactory.newInstance(ResourceService.class)).getParticipantId();
+            String participantId = ParticipantService.getInstance().getState().participant.Id;
             String resourceActionQuery =
                     'SELECT Id, ' +
                             'IsFavorite__c, ' +
@@ -49,7 +48,7 @@ public with sharing class ResourceRemote {
     public static String getTrialId() {
         try {
             String trialId;
-            ParticipantService.ParticipantState state = ((ResourceService) ClassFactory.newInstance(ResourceService.class)).getParticipantState();
+            ParticipantService.ParticipantState state = ParticipantService.getInstance().getState();
             if (state.ctp != null) {
                 trialId = state.ctp.Id;
             } else {
@@ -64,7 +63,7 @@ public with sharing class ResourceRemote {
     @AuraEnabled
     public static String getNoTAMessage() {
         try {
-            ParticipantService.ParticipantState state = ((ResourceService) ClassFactory.newInstance(ResourceService.class)).getParticipantState();
+            ParticipantService.ParticipantState state = ParticipantService.getInstance().getState();
             if ((state.value == ParticipantService.ParticipantStates.ALUMNI) && (state.participant.Conditions__c == 0)) {
                 String noTAMessage;
                 String message = Label.Resources_No_Therapeutic_Area;
