--- a/force-app/main/default/classes/ResourceTARelatedService.cls
+++ b/force-app/main/default/classes/ResourceTARelatedService.cls
@@ -1,4 +1,4 @@
-public inherited sharing class ResourceTARelatedService extends ResourceBasicService {
+public inherited sharing class ResourceTARelatedService extends ResourceService {
 
     public static ResourceTARelatedService getInstance(){
         return (ResourceTARelatedService) ClassFactory.newInstance(ResourceTARelatedService.class);
@@ -12,8 +12,8 @@ public inherited sharing class ResourceTARelatedService extends ResourceBasicSer
                         'WHERE Therapeutic_Area__c = \'' + therapeuticAreaId + '\' ' +
                         (contentClass == null ? '' : ('AND Resource__r.Content_Class__c = \'' + contentClass + '\' ')) +
                         (resourceId == null ? '' : ('AND Resource__c = \'' + resourceId + '\' ')) +
-                        'AND Resource__r.RecordType.DeveloperName = \'' + rService.getResourceType() + '\' ' +
-                        'AND Resource__r.Language__c = \'' + rService.getParticipantLanguage() + '\' ';
+                        'AND Resource__r.RecordType.DeveloperName = \'' + resourceType + '\' ' +
+                        'AND Resource__r.Language__c = \'' + getParticipantLanguage() + '\' ';
         List<Therapeutic_Area_Assignment__c> assignments = (List<Therapeutic_Area_Assignment__c>) ((DatabaseProxy) ClassFactory.newInstance(DatabaseProxy.class))
                 .query(therapeuticAreaAssignmentsQuery, true);
         List<Id> resourcesIds = new List<Id>();
