--- a/force-app/main/default/classes/TrialItemRemote.cls
+++ b/force-app/main/default/classes/TrialItemRemote.cls
@@ -4,10 +4,10 @@
 public with sharing class TrialItemRemote {
 
     @AuraEnabled
-    public static void createCaseToStudy(Participant__c participant, Boolean isDelegate) {
+    public static void createCaseToStudy(Participant__c participant,Clinical_Trial_Profile__c ctp, Boolean isDelegate) {
         try {
             TrialSearchHelper helper = (TrialSearchHelper) ClassFactory.newInstance(TrialSearchHelper.class);
-            helper.createCaseAndSendNotification(participant);
+            helper.createCaseAndSendNotification(participant, ctp);
             if (participant.Id != null && !isDelegate) {
                 System.debug('For Me....');
                 update participant;
