--- a/force-app/main/default/classes/ViewPatientsRemote.cls
+++ b/force-app/main/default/classes/ViewPatientsRemote.cls
@@ -49,7 +49,7 @@ public without sharing class ViewPatientsRemote {
                     'Participant__r.First_Name__c',
                     'Participant__r.Last_Name__c',
                     'Screening_ID__c',
-                    'Referral_ID__c'
+                    'Name'
                     /*'Referral_ID__c',
                     'Patient_ID__c',
                     'Participant_Name__c',
@@ -87,9 +87,15 @@ public without sharing class ViewPatientsRemote {
 
             //records for current filter and pagination
             List<Participant_Enrollment__c> peList = ParticipantEnrollmentService.getParticipantEnrollments(filterCopy, initData.paginationData, delegateId);
-            List<LabelValueItem> peSource = new List<LabelValueItem>{new LabelValueItem('All', null)};
+            List<LabelValueItem> peSource = new List<LabelValueItem>{new LabelValueItem(Label.PG_MRR_L_All_Sources, null)};
             Map<String,String> sourceMap = new Map<String,String>();
+            List<LabelValueItem> trialFilterData = new  List<LabelValueItem>{new LabelValueItem(Label.PG_MRRL_L_All_studies, null)};
+            List<LabelValueItem> ssFilterData = new  List<LabelValueItem>{new LabelValueItem(Label.PG_Report_L_All_study_sites, null)};
+            List<LabelValueItem> statusFilterData = new  List<LabelValueItem>{new LabelValueItem(Label.PG_MRR_L_All_Statuses, null)};
             for (Integer i = 0, j=peList.size(); i < j; i++) {
+                trialFilterData.add(new LabelValueItem(peList[i].Study_Site__r.Clinical_Trial_Profile__r.Study_Code_Name__c, peList[i].Study_Site__r.Clinical_Trial_Profile__r.Id));
+                ssFilterData.add(new LabelValueItem(peList[i].Study_Site__r.Name, peList[i].Study_Site__r.Id));
+                statusFilterData.add(new LabelValueItem(peList[i].Participant_Status__c, peList[i].Participant_Status__c));
                 if(peList[i].Referral_Source__c == ParticipantEnrollmentService.PE_REFERRAL_SOURCE_HCP){
                     sourceMap.put(peList[i].HCP_Contact_HCPEnroll__c,peList[i].HCP_Contact_HCPEnroll__r.Name);
                 } else if(peList[i].Referral_Source__c == ParticipantEnrollmentService.PE_REFERRAL_SOURCE_PI){
@@ -101,6 +107,9 @@ public without sharing class ViewPatientsRemote {
             for(String key : sourceMap.keySet()){
                 peSource.add(new LabelValueItem(sourceMap.get(key), key));
             }
+            initData.peFilterData.studies = trialFilterData;
+            initData.peFilterData.studySites = ssFilterData;
+            initData.peFilterData.statuses = statusFilterData;
             initData.peFilterData.source = peSource;
             initData.currentPageList = convertToPEWrapperList(
                     peList,
@@ -123,6 +132,14 @@ public without sharing class ViewPatientsRemote {
     @AuraEnabled
     public static String getRecords(String filterJSON, String paginationJSON, String piBtnFilter, String userMode, Boolean studyChanged, String delegateId){
         ParticipantEnrollmentService.PEFilter filter = (ParticipantEnrollmentService.PEFilter)JSON.deserialize(filterJSON, ParticipantEnrollmentService.PEFilter.class);
+        SearchResult result = new SearchResult();
+        result.peFilterData = ParticipantEnrollmentService.getPEFilterData(filter.study, userMode, true, delegateId);
+        result.peFilterData.sortVariants.addAll(new List<LabelValueItem>{
+                new LabelValueItem(SortOrder.ORDER_A_Z, 'Alphabetical_ASC,Participant__r.First_Name__c,Participant__r.Last_Name__c'),
+                new LabelValueItem(SortOrder.ORDER_Z_A, 'Alphabetical_DESC,Participant__r.First_Name__c,Participant__r.Last_Name__c')
+        });
+        ParticipantEnrollmentService.PEFilter activefilter = new ParticipantEnrollmentService.PEFilter(result.peFilterData);
+        activefilter.activePE = filter.activePE;
         /*if(!String.isEmpty(filter.searchText)){
             Map<String,Object> filterMap = (Map<String,Object>) JSON.deserializeUntyped(filterJSON);
             for(String key : filterMap.keySet()){
@@ -146,14 +163,15 @@ public without sharing class ViewPatientsRemote {
                 filter.dateRange = null;
                 filter.acceptenceStatus = null;
                 filter.referringClinic = null;*/
+
                 if(piBtnFilter.equalsIgnoreCase('Pending')){
-                    filter.additionalFilter += ' AND Participant_Status__c IN ' +
+                    activefilter.additionalFilter += ' AND Participant_Status__c IN ' +
                             '(\'' + String.join(PEStatusState.STATUS_STEPS_TABLE[0].states.values(), '\',\'') + '\')'
                             + ' AND Non_Referral_Reason__c !=\''+ParticipantEnrollmentService.NON_REF_REASON_STATUS_HAD_DISC_NOT_INTERESTED + '\''
                             + ' AND Non_Referral_Reason__c !=\''+ParticipantEnrollmentService.NON_REF_REASON_STATUS_NOT_INTERESTED + '\''
                             + ' AND Non_Referral_Reason__c !=\''+ParticipantEnrollmentService.NON_REF_REASON_STATUS_FAILED_PE_SCREENING + '\'';
                 }else{
-                    filter.additionalFilter += ' AND Participant_Status__c IN ' +
+                    activefilter.additionalFilter += ' AND Participant_Status__c IN ' +
                             '(\'' + String.join(PEStatusState.STATUSES_IN_PROGRESS, '\',\'') + '\')'
                             + ' AND Non_Referral_Reason__c !=\''+ParticipantEnrollmentService.NON_REF_REASON_STATUS_HAD_DISC_NOT_INTERESTED + '\''
                             + ' AND Non_Referral_Reason__c !=\''+ParticipantEnrollmentService.NON_REF_REASON_STATUS_NOT_INTERESTED + '\''
@@ -161,23 +179,78 @@ public without sharing class ViewPatientsRemote {
                 }
             }
             else if(userMode == CommunityService.USER_MODE_HCP){
-                filter.additionalFilter += + ' AND Non_Referral_Reason__c !=\''+ParticipantEnrollmentService.NON_REF_REASON_STATUS_HAD_DISC_NOT_INTERESTED + '\''
+                activefilter.additionalFilter += + ' AND Non_Referral_Reason__c !=\''+ParticipantEnrollmentService.NON_REF_REASON_STATUS_HAD_DISC_NOT_INTERESTED + '\''
                         + ' AND Non_Referral_Reason__c !=\''+ParticipantEnrollmentService.NON_REF_REASON_STATUS_NOT_INTERESTED + '\''
                         + ' AND Non_Referral_Reason__c !=\''+ParticipantEnrollmentService.NON_REF_REASON_STATUS_FAILED_PE_SCREENING + '\'';
             }
-            System.debug('additionalFilter' + filter.additionalFilter);
-            SearchResult result = new SearchResult();
+            System.debug('additionalFilter' + activefilter.additionalFilter);
+
+
+            result.paginationData = pagination;
+
+
+            List<Participant_Enrollment__c> peList = ParticipantEnrollmentService.getParticipantEnrollments(activefilter, pagination, delegateId);
+            List<LabelValueItem> peSource = new List<LabelValueItem>{new LabelValueItem(Label.PG_MRR_L_All_Sources, null)};
+            Map<String,String> sourceMap = new Map<String,String>();
+            List<LabelValueItem> trialFilterData = new  List<LabelValueItem>{new LabelValueItem(Label.PG_MRRL_L_All_studies, null)};
+            List<LabelValueItem> ssFilterData = new  List<LabelValueItem>{new LabelValueItem(Label.PG_Report_L_All_study_sites, null)};
+            List<LabelValueItem> statusFilterData = new  List<LabelValueItem>{new LabelValueItem(Label.PG_MRR_L_All_Statuses, null)};
+            for (Integer i = 0, j = peList.size(); i < j; i++) {
+                trialFilterData.add(new LabelValueItem(peList[i].Study_Site__r.Clinical_Trial_Profile__r.Study_Code_Name__c, peList[i].Study_Site__r.Clinical_Trial_Profile__r.Id));
+                if (!String.isEmpty(filter.study)) {
+                    if (peList[i].Study_Site__r.Clinical_Trial_Profile__r.Id == filter.study) {
+                        ssFilterData.add(new LabelValueItem(peList[i].Study_Site__r.Name, peList[i].Study_Site__r.Id));
+                        if (!String.isEmpty(filter.studySite)) {
+                            if (peList[i].Study_Site__r.Id == filter.studySite) {
+                                if (peList[i].Referral_Source__c == ParticipantEnrollmentService.PE_REFERRAL_SOURCE_HCP) {
+                                    sourceMap.put(peList[i].HCP_Contact_HCPEnroll__c, peList[i].HCP_Contact_HCPEnroll__r.Name);
+                                } else if (peList[i].Referral_Source__c == ParticipantEnrollmentService.PE_REFERRAL_SOURCE_PI) {
+                                    sourceMap.put(peList[i].PI_Contact__c, peList[i].PI_Contact__r.Name);
+                                } else {
+                                    sourceMap.put(ParticipantEnrollmentService.PE_REFERRAL_SOURCE_DIGITAL_RECRUITMENT, ParticipantEnrollmentService.PE_REFERRAL_SOURCE_DIGITAL_RECRUITMENT);
+                                }
+                            }
+                        } else {
+                            if (peList[i].Referral_Source__c == ParticipantEnrollmentService.PE_REFERRAL_SOURCE_HCP) {
+                                sourceMap.put(peList[i].HCP_Contact_HCPEnroll__c, peList[i].HCP_Contact_HCPEnroll__r.Name);
+                            } else if (peList[i].Referral_Source__c == ParticipantEnrollmentService.PE_REFERRAL_SOURCE_PI) {
+                                sourceMap.put(peList[i].PI_Contact__c, peList[i].PI_Contact__r.Name);
+                            } else {
+                                sourceMap.put(ParticipantEnrollmentService.PE_REFERRAL_SOURCE_DIGITAL_RECRUITMENT, ParticipantEnrollmentService.PE_REFERRAL_SOURCE_DIGITAL_RECRUITMENT);
+                            }
+                        }
+                        statusFilterData.add(new LabelValueItem(peList[i].Participant_Status__c, peList[i].Participant_Status__c));
+                    }
+                } else {
+                    ssFilterData.add(new LabelValueItem(peList[i].Study_Site__r.Name, peList[i].Study_Site__r.Id));
+                    statusFilterData.add(new LabelValueItem(peList[i].Participant_Status__c, peList[i].Participant_Status__c));
+                    if (peList[i].Referral_Source__c == ParticipantEnrollmentService.PE_REFERRAL_SOURCE_HCP) {
+                        sourceMap.put(peList[i].HCP_Contact_HCPEnroll__c, peList[i].HCP_Contact_HCPEnroll__r.Name);
+                    } else if (peList[i].Referral_Source__c == ParticipantEnrollmentService.PE_REFERRAL_SOURCE_PI) {
+                        sourceMap.put(peList[i].PI_Contact__c, peList[i].PI_Contact__r.Name);
+                    } else {
+                        sourceMap.put(ParticipantEnrollmentService.PE_REFERRAL_SOURCE_DIGITAL_RECRUITMENT, ParticipantEnrollmentService.PE_REFERRAL_SOURCE_DIGITAL_RECRUITMENT);
+                    }
+                }
+            }
+            for(String key : sourceMap.keySet()){
+                peSource.add(new LabelValueItem(sourceMap.get(key), key));
+            }
+            result.peFilterData.studies = trialFilterData;
+            result.peFilterData.studySites = ssFilterData;
+            result.peFilterData.statuses = statusFilterData;
+            result.peFilterData.source = peSource;
+            result.peList = convertToPEWrapperList(
+                    peList,
+                    userMode,
+                    delegateId
+            );
             result.peList = convertToPEWrapperList(
                     ParticipantEnrollmentService.getParticipantEnrollments(filter, pagination, delegateId),
                     userMode,
                     delegateId
             );
-            result.paginationData = pagination;
-            result.peFilterData = ParticipantEnrollmentService.getPEFilterData(filter.study, userMode, true, delegateId);
-            result.peFilterData.sortVariants.addAll(new List<LabelValueItem>{
-                    new LabelValueItem(SortOrder.ORDER_A_Z, 'Alphabetical_ASC,Participant__r.First_Name__c,Participant__r.Last_Name__c'),
-                    new LabelValueItem(SortOrder.ORDER_Z_A, 'Alphabetical_DESC,Participant__r.First_Name__c,Participant__r.Last_Name__c')
-            });
+
             result.peFilter = filter;
 //            Boolean siteExists = false;
 //            for(LabelValueItem site: result.peFilterData.studySites){
